♻️ update routes package structure and registration
