# pkg/docs/swagger.json
@@ -8,9 +8,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/book": {
+        "/product": {
             "post": {
-                "description": "Create Book",
+                "description": "Create Product",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,29 +18,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Book"
+                    "Product"
                 ],
-                "summary": "Create Book",
+                "summary": "Create Product",
                 "parameters": [
                     {
-                        "description": "Book Payload",
+                        "description": "Product Payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.CreateBookPayload"
+                            "$ref": "#/definitions/controllers.CreateProductPayload"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Book created successfully",
+                        "description": "Product created successfully",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Book already exists",
+                        "description": "Product already exists",
                         "schema": {
                             "type": "string"
                         }
@@ -48,9 +48,9 @@
                 }
             }
         },
-        "/books": {
+        "/products": {
             "get": {
-                "description": "Get Book",
+                "description": "Get Products",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,14 +58,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Book"
+                    "Product"
                 ],
-                "summary": "Get Books",
+                "summary": "Get Products",
                 "responses": {
                     "200": {
-                        "description": "Hello Book Service",
+                        "description": "List of products",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ProductSchema"
+                            }
                         }
                     }
                 }
@@ -159,20 +162,23 @@
         }
     },
     "definitions": {
-        "controllers.CreateBookPayload": {
+        "controllers.CreateProductPayload": {
             "type": "object",
             "properties": {
-                "author": {
+                "description": {
                     "type": "string"
                 },
-                "pages": {
-                    "type": "integer"
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "number"
                 },
-                "title": {
-                    "type": "string"
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
@@ -200,6 +206,50 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.ProductSchema": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
